Closed Bug 1359450 Opened 7 years ago Closed 7 years ago

Force the use of wmode opaque when Firefox isn't using accelerated compositing

Categories

(Core Graveyard :: Plug-ins, defect)

defect
Not set
normal

Tracking

(firefox54 fixed, firefox55 fixed)

RESOLVED FIXED
mozilla55
Tracking Status
firefox54 --- fixed
firefox55 --- fixed

People

(Reporter: jimm, Assigned: jimm)

References

()

Details

Attachments

(1 file)

In bug 1340276 we forced wmode=direct for Flash applets that specify wmode=window or do not specify a wmode. The fallback mode for direct is window. 

I'd like to modify this slightly such that in cases where we do not have an accelerated backend (cases where NPNVsupportsAsyncWindowsDXGISurfaceBool returns false) plugin shim code forces wmode=opaque rather than direct. This should prevent flash from falling back on windowed mode in this situation.
Actually, we don't need to force opaque mode because Flash forces opaque internally for these cases when switching windowed mode to async bitmap rendering.
Attached patch patchSplinter Review
Assignee: nobody → jmathies
Attachment #8861488 - Flags: review?(aklotz)
Attachment #8861488 - Flags: review?(aklotz) → review+
Keywords: checkin-needed
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/a02c93ed5bcf
Use Flash default wmode handling when Firefox can't support async accelerated rendering. Avoid forcing direct mode in these cases which falls back on windowed layout. r=aklotz
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/a02c93ed5bcf
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Comment on attachment 8861488 [details] [diff] [review]
patch

Approval Request Comment
[Feature/Bug causing the regression]:
none. this is a configuration change in the way we handle flash window modes.
[User impact if declined]:
more use of windowed mode in release than we'd like.
[Is this code covered by automated tests?]:
no.
[Has the fix been verified in Nightly?]:
yes.
[Needs manual test from QE? If yes, steps to reproduce]: 
sv plans to do a full round of testing of the overall feature in beta starting next week.
[List of other uplifts needed for the feature/fix]:
none.
[Is the change risky?]:
no.
[Why is the change risky/not risky?]:
well understood change to our rewrite rules for flash wmodes.
[String changes made/needed]:
none.
Attachment #8861488 - Flags: approval-mozilla-beta?
Comment on attachment 8861488 [details] [diff] [review]
patch

Fix a wmode handling issue. Beta54+. Should be in 54 beta 4.
Attachment #8861488 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: