Bug 1359450 - Use Flash default wmode handling when Firefox can't support async accelerated rendering. Avoid forcing direct mode in these cases which falls back on windowed layout. r=aklotz, a=gchang

MozReview-Commit-ID: BdCeM7xDk9r

--HG--
extra : source : a02c93ed5bcf6969ffea4c771bbf4f7c418044b8
extra : amend_source : 6fa4d8f1d96a6382b307f38a0cd63b4af0de3710